# sigma-vm

./: CMakeLists.txt  Makefile  build.sh  run.sh  test.asm
docs/: comands.txt
include/sasm/: CodeGenerator.hpp  Lexer.hpp  Linker.hpp  Parser.hpp
include/sigma-vm/: RAM.hpp  VirtualMachine.hpp
src/: RAM.cpp  VirtualMachine.cpp  main.cpp
src/sasm/: CodeGenerator.cpp  Lexer.cpp  Linker.cpp  Parser.cpp
